# LuaDepot-app

./: .gitignore  build_all.sh  index.html  package-lock.json  package.json  tailwind.config.cjs  tauri.key  tauri.key.pub
.github/workflows/: blank.yml  release.yml
.vibecheck/: last-score.json
.vibecheck/flow/: config.json
.vibecheck/provenance/: attestations.db  edits.jsonl
drawsvg_ext/drawsvg/: LICENSE.txt  README.md
drawsvg_ext/drawsvg/src/: index.html  script.js  style.css
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: collections.rs  lib.rs  library.rs  main.rs  manifest.rs  steam.rs
src/components/: AnimatedIcon.tsx  ConnectScreen.tsx  ContextMenu.tsx  DropZone.tsx  FeedbackWidget.tsx  GameCard.tsx  GamePreviewModal.tsx  LibraryIcon.tsx  LibraryView.tsx  SearchIcon.tsx  SearchView.tsx  SettingsView.tsx  Sidebar.tsx  SplashLoader.tsx  WindowControls.tsx
src/components/ui/: CogIcon.tsx  DrawSvgLoader.tsx  card-outline-effect.tsx  glowing-effect-card.tsx  glowing-effect-demo.tsx  glowing-effect.tsx
src/components/ui/gooey/: GooeySearchBar.tsx  SearchBar.tsx
src/components/ui/gooey/components/: GooeyFilter.tsx  InfoIcon.tsx  SearchIcon.tsx
src/lib/: track.ts
src/styles/gooey/: gooey.css
src/types/: steam.ts
