[package]
name = "flintgen"
version = "0.1.0"
description = "Steam Manifest Library"
authors = ["mattias"]
edition = "2021"

[lib]
name = "flintgen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }
tokio = { version = "1", features = ["full"] }
zip = "2"
regex = "1"
dirs = "6"
urlencoding = "2.1.3"
